# hash_performance_test

./: README.md  build_simd.sh  index.html  large_binary  run.sh
rust_hash/: Cargo.toml
rust_hash/src/: lib.rs
